--- a/notebooks_test/test_transformers.ipynb
+++ b/notebooks_test/test_transformers.ipynb
@@ -19,15 +19,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-17 20:39:09.811992: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-07-17 20:39:09.823887: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-07-22 19:02:21.279803: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-07-22 19:02:21.291095: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1752777549.841259  150795 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1752777549.845073  150795 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-07-17 20:39:09.860682: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1753203741.305361   25048 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1753203741.309041   25048 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-07-22 19:02:21.323881: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "from SADL.time_series.algorithms import transformers\n",
+    "from SADL.time_series.time_series_utils import TimeSeriesProcessor\n",
+    "from SADL.visualization_module import DataVisualization\n",
+    "import numpy as np\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "load and preprocess data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -77,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +118,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Define Model Vanilla Transformer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -111,10 +139,6 @@
     }
    ],
    "source": [
-    "from SADL.time_series.algorithms import transformers\n",
-    "from SADL.time_series.time_series_utils import TimeSeriesProcessor\n",
-    "import numpy as np\n",
-    "import torch\n",
     "\n",
     "batch_size = 16\n",
     "seq_len = 24\n",
@@ -147,6 +171,13 @@
     "    \n",
     "\n",
     "model = transformers.TransformersAnomalyDetection(**kwargs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Time Series Dataset"
    ]
   },
   {
@@ -239,11 +270,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Define model Informer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Params: {'label_parser': None, 'device': device(type='cpu'), 'train_epochs': 5, 'batch_size': 16, 'lr': 0.001} \n",
+      "Model Params: {'algorithm_': 'Informer', 'enc_in': 5, 'dec_in': 5, 'c_out': 5, 'seq_len': 24, 'label_len': 24, 'out_len': 24, 'factor': 5, 'd_model': 64, 'n_heads': 8, 'e_layers': 2, 'd_layers': 1, 'd_ff': 128, 'dropout': 0.1, 'attn': 'prob', 'activation': 'gelu', 'output_attention': False, 'distil': True, 'mix': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 16\n",
+    "seq_len = 24\n",
+    "pred_len = 24\n",
+    "label_len = 24\n",
+    "input_dim = 5  # tanto encoder como decoder\n",
+    "d_model = 64\n",
+    "train_epochs = 5\n",
+    "\n",
+    "# Simulamos series de entrada\n",
+    "X = torch.randn(batch_size, seq_len, input_dim)\n",
+    "\n",
+    "# Instanciamos el modelo Transformer\n",
+    "kwargs = {\n",
+    "    \"algorithm_\": \"Informer\",\n",
+    "    \"label_parser\": None,\n",
+    "    \"enc_in\": input_dim,             # Number of input variables for the encoder\n",
+    "    \"dec_in\": input_dim,             # Number of input variables for the decoder\n",
+    "    \"c_out\": input_dim,              # Output dimension (change if needed)\n",
+    "    \"seq_len\": seq_len,              # Input sequence length\n",
+    "    \"label_len\": label_len,          # Length of the decoder input (label segment)\n",
+    "    \"out_len\": pred_len,             # Prediction length\n",
+    "    \"factor\": 5,                     # ProbSparse factor (used in ProbAttention)\n",
+    "    \"d_model\": d_model,              # Model dimension\n",
+    "    \"n_heads\": 8,                    # Number of attention heads\n",
+    "    \"e_layers\": 2,                   # Number of encoder layers\n",
+    "    \"d_layers\": 1,                   # Number of decoder layers\n",
+    "    \"d_ff\": 128,                     # Feedforward network dimension\n",
+    "    \"dropout\": 0.1,                  # Dropout rate\n",
+    "    \"attn\": \"prob\",                  # Attention type: 'prob' or 'full'\n",
+    "    \"activation\": \"gelu\",           # Activation function\n",
+    "    \"output_attention\": False,       # Whether to output attention weights\n",
+    "    \"distil\": True,                  # Whether to use distillation in the encoder\n",
+    "    \"mix\": True,                     # Whether to use mixed attention in the decoder\n",
+    "    \"device\": torch.device('cuda' if torch.cuda.is_available() else 'cpu'),  # Device for model\n",
+    "    \"train_epochs\": train_epochs,    # Number of training epochs\n",
+    "    \"batch_size\": batch_size,        # Batch size\n",
+    "    \"lr\": 1e-3                       # Learning rate\n",
+    "}\n",
+    "    \n",
+    "\n",
+    "model = transformers.TransformersAnomalyDetection(**kwargs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Time Serie Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train shape: (7977, 24, 5)\n",
+      "y_train shape: (7977, 24)\n",
+      "X_test shape: (1977, 24, 5)\n",
+      "y_test shape: (1977, 24)\n"
+     ]
+    }
+   ],
+   "source": [
+    "processor = TimeSeriesProcessor(window_size= seq_len, step_size=1, future_prediction=False)\n",
+    "X_train_windows, y_train_windows, X_test_windows, y_test_windows = processor.process_train_test(X_train, y_train, X_test, y_test)\n",
+    "print(\"X_train shape:\", X_train_windows.shape)\n",
+    "print(\"y_train shape:\", y_train_windows.shape)\n",
+    "print(\"X_test shape:\", X_test_windows.shape)\n",
+    "print(\"y_test shape:\", y_test_windows.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fit and Evaluate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/Beatriz/Doctorado GR/ADL_platform/S-ADL/venv/lib/python3.10/site-packages/torch/nn/modules/loss.py:610: UserWarning: Using a target size (torch.Size([16, 24, 5])) that is different to the input size (torch.Size([24, 5])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n",
+      "/data/Beatriz/Doctorado GR/ADL_platform/S-ADL/venv/lib/python3.10/site-packages/torch/nn/modules/loss.py:610: UserWarning: Using a target size (torch.Size([9, 24, 5])) that is different to the input size (torch.Size([24, 5])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5, Loss: 1.018134\n",
+      "Epoch 2/5, Loss: 0.987470\n",
+      "Epoch 3/5, Loss: 0.974741\n",
+      "Epoch 4/5, Loss: 0.964567\n",
+      "Epoch 5/5, Loss: 0.959280\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<SADL.time_series.algorithms.transformers.TransformersAnomalyDetection at 0x7343ceeb9ea0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train_windows)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anomaly scores: torch.Size([1977])\n",
+      "Predicted labels: torch.Size([47448, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = model.decision_function(X_test_windows)\n",
+    "pred = model.predict(X_test_windows)\n",
+    "\n",
+    "print(\"Anomaly scores:\", scores.shape)\n",
+    "print(\"Predicted labels:\", pred.shape)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.evaluate(X_test_windows,y_test_windows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels_pred = model.labels_preds\n",
+    "labels_true = np.array(y_test).ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualizer = DataVisualization(data=X_test, plot_technique='plot_anomaly', dim_reduction_technique='PCA', y_true=labels_true, y_pred=labels_pred,subset_size_percent=0.2)\n",
+    "visualizer.fit()\n",
+    "visualizer.show()"
+   ]
   }
  ],
  "metadata": {
